--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </div>
                 <div class="project-image">
                     <div class="project-screenshot">
-                        <img src="https://images.unsplash.com/photo-1606092195730-5d7b9af1efc5?w=500&h=300&fit=crop&crop=center" alt="Blackjack AI Project" class="screenshot-img">
+                        <img src="img/blackjack.svg" alt="Ilustración de cartas de Blackjack" class="screenshot-img">
                         <div class="project-overlay">
                             <i class="fas fa-play-circle"></i>
                             <span>Ver Demo</span>
