Update portfolio with live demo links and dynamic screenshots

--- a/index.html
+++ b/index.html
@@ -105,16 +105,21 @@
                             <span>IA</span>
                         </div>
                     </div>
-                    <a href="https://github.com/D33pKill/blackjack.git" class="btn-primary" target="_blank">Ver en GitHub</a>
+                    <div style="display: flex; gap: 1rem; margin-top: 1rem;">
+                        <a href="https://blackjackiatb.netlify.app/" class="btn-primary" target="_blank">Ver Demo</a>
+                        <a href="https://github.com/D33pKill/blackjack.git" class="btn-primary" target="_blank" style="background: rgba(104, 211, 145, 0.1); border: 1px solid rgba(104, 211, 145, 0.5);">Ver en GitHub</a>
+                    </div>
                 </div>
                 <div class="project-image">
-                    <div class="project-screenshot">
-                        <img src="img/blackjack.svg" alt="Ilustración de cartas de Blackjack" class="screenshot-img">
-                        <div class="project-overlay">
-                            <i class="fas fa-play-circle"></i>
-                            <span>Ver Demo</span>
+                    <a href="https://blackjackiatb.netlify.app/" target="_blank" style="text-decoration: none;">
+                        <div class="project-screenshot">
+                            <img src="https://images.unsplash.com/photo-1596838132731-3301c3fd4317?w=800&h=600&fit=crop" alt="Blackjack Game" class="screenshot-img">
+                            <div class="project-overlay">
+                                <i class="fas fa-play-circle"></i>
+                                <span>Ver Demo</span>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
             
@@ -123,10 +128,12 @@
                 <div class="projects-grid">
                     <div class="project-card">
                         <div class="project-card-image">
-                            <img src="https://images.unsplash.com/photo-1416879595882-3373a0480b5b?w=400&h=200&fit=crop&crop=center" alt="Calendario de Cultivo" class="card-screenshot">
-                            <div class="card-overlay">
-                                <i class="fas fa-seedling"></i>
-                            </div>
+                            <a href="https://calendario-cultivo.netlify.app/" target="_blank" style="text-decoration: none;">
+                                <img src="https://images.unsplash.com/photo-1464226184884-fa280b87c399?w=400&h=200&fit=crop" alt="Calendario de Cultivo" class="card-screenshot">
+                                <div class="card-overlay">
+                                    <i class="fas fa-seedling"></i>
+                                </div>
+                            </a>
                         </div>
                         <div class="project-card-content">
                             <h4>Calendario de Cultivo</h4>
@@ -145,34 +152,42 @@
                                     <span>Tailwind</span>
                                 </div>
                             </div>
-                            <a href="https://github.com/D33pKill/calendario.git" class="project-link" target="_blank">Ver en GitHub</a>
+                            <div style="display: flex; gap: 0.5rem; flex-wrap: wrap;">
+                                <a href="https://calendario-cultivo.netlify.app/" class="project-link" target="_blank" style="background: rgba(104, 211, 145, 0.2); padding: 0.5rem 1rem; border-radius: 8px;">Ver Demo</a>
+                                <a href="https://github.com/D33pKill/calendario.git" class="project-link" target="_blank">Ver en GitHub</a>
+                            </div>
                         </div>
                     </div>
                     <div class="project-card">
                         <div class="project-card-image">
-                            <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=400&h=200&fit=crop&crop=center" alt="Sistema de Envíos" class="card-screenshot">
-                            <div class="card-overlay">
-                                <i class="fas fa-shipping-fast"></i>
-                            </div>
+                            <a href="https://transporte-app-mockup.netlify.app/" target="_blank" style="text-decoration: none;">
+                                <img src="https://images.unsplash.com/photo-1566576721346-d4a3b4eaeb55?w=400&h=200&fit=crop" alt="Sistema de Transporte" class="card-screenshot">
+                                <div class="card-overlay">
+                                    <i class="fas fa-shipping-fast"></i>
+                                </div>
+                            </a>
                         </div>
                         <div class="project-card-content">
-                            <h4>Sistema de Envíos</h4>
-                            <p>Sistema completo de gestión de envíos con funcionalidades de seguimiento, administración y reportes. Desarrollado con tecnologías web modernas.</p>
+                            <h4>Sistema de Transporte</h4>
+                            <p>Sistema completo de gestión de transportes con funcionalidades de seguimiento, administración y reportes. Desarrollado con tecnologías web modernas.</p>
                             <div class="project-tech">
                                 <div class="tech-item-small">
                                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript" class="tech-logo-small">
                                     <span>JavaScript</span>
                                 </div>
                                 <div class="tech-item-small">
-                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="Node.js" class="tech-logo-small">
-                                    <span>Node.js</span>
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML5" class="tech-logo-small">
+                                    <span>HTML5</span>
                                 </div>
                                 <div class="tech-item-small">
-                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="MySQL" class="tech-logo-small">
-                                    <span>MySQL</span>
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS3" class="tech-logo-small">
+                                    <span>CSS3</span>
                                 </div>
                             </div>
-                            <a href="https://github.com/D33pKill/sistema-de-envios.git" class="project-link" target="_blank">Ver en GitHub</a>
+                            <div style="display: flex; gap: 0.5rem; flex-wrap: wrap;">
+                                <a href="https://transporte-app-mockup.netlify.app/" class="project-link" target="_blank" style="background: rgba(104, 211, 145, 0.2); padding: 0.5rem 1rem; border-radius: 8px;">Ver Demo</a>
+                                <a href="https://github.com/D33pKill/sistema-de-envios.git" class="project-link" target="_blank">Ver en GitHub</a>
+                            </div>
                         </div>
                     </div>
                     <div class="project-card">
